--- a/css/css.css
+++ b/css/css.css
@@ -6,3 +6,10 @@ body{
     height: 25%;
     width: 25%;
 }
+.dark-mode{
+    background-color: black;
+    color: white;
+}
+#movie-card-container{
+    display: flex;
+}
